--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,9 +2,9 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ beta ]
+    branches: [ main ]
   pull_request:
-    branches: [ beta ]
+    branches: [ main ]
 
 jobs:
   push_to_registry:
@@ -31,5 +31,5 @@ jobs:
         with:
           context: .
           push: true
-          tags: unfwalle/waldemar.tk:beta
+          tags: unfwalle/waldemar.tk:latest
           labels: ${{ steps.meta.outputs.labels }}
